# mount-EFS-on-AWS-EC2

./: .env.template  .gitignore  LICENSE  README.md  add-secrets.sh  cdktf.json  help  main.py  main_serverless.py  packer_ami.json  pyproject.toml
.github/workflows/: build-ami.yml
webservice/: app.py  main.py  requirements.txt
