[project]
name = "efs-on-ec2"
version = "0.1.0"
description = ""
authors = [
    {name = "Yatoute",email = "mintoamayatoute@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "cdktf (>=0.20.12,<0.21.0)",
    "cdktf-cdktf-provider-aws (>=19.64.0,<20.0.0)",
    "constructs (>=10.4.2,<11.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "boto3 (>=1.38.21,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false